--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,11 +14,12 @@ html {
     justify-content: space-between;
     color: #2D1C50;
     padding: 10px;
+    padding-bottom: 5px;
+    height: 200px;
 }
 
 .logo {
-    height: 90px;
-    width: 90px;
+    height: 80px;
 }
 
 .header-name {
@@ -28,6 +29,7 @@ html {
     font-weight: 800;*/
     font-size: 32px;
     text-align: center;
+    height: 80px;
 }
 
 .socials-mobile {
@@ -53,7 +55,7 @@ html {
 
 .banner {
     background-color: #CDA4FF;
-    height: 300px;
+    height: 325px;
     position: relative;
 }
 
@@ -66,7 +68,6 @@ p {
 .btn-div {
     display: flex;
     justify-content: center;
-    margin-top: 70px;
 }
 
 .about-btn {
@@ -119,12 +120,26 @@ footer {
     }
     .header {
         padding-top: 40px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     .logo {
-        height: 45px;
-        width: 45px;
+        height: 52px;
     }
     .header-name {
         font-size: 20px;
+        height: 52px;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .header-name {
+        font-size: 15px;
+    }
+    .logo {
+        height: 40px;
+    }
+    .header-name {
+        height: 40px;
     }
 }
