--- a/src/css/index.css
+++ b/src/css/index.css
@@ -148,7 +148,7 @@ p {
     background-color: #FBF8FF;
     width: 349px;
     padding: 14px;
-    top: 290px;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -323,15 +323,6 @@ footer {
         justify-content: center;
         align-items: center;
     }
-    
-    #modal {
-        background-color: #FBF8FF;
-        width: 100%;
-        height: 100%;
-        padding: 18px;
-        top: 50%;
-        left: 50%;
-    }
 
     #close-modal-btn {
         background: #313131;
@@ -343,6 +334,12 @@ footer {
     }
 }
 
+@media only screen and (max-width: 365px) {
+    #modal {
+        width: 100%;
+    }
+}
+
 /*@media only screen and (max-width: 334px) {
     .header-name {
         display: none;
@@ -350,6 +347,12 @@ footer {
 }*/
 
 @media only screen and (max-width: 340px) {
+    h1 {
+        padding-right: 5px;
+        letter-spacing: 5px;
+        /*letter-spacing: normal;
+        text-justify: auto;*/
+    }
     #modal {
         padding: 5px;
     }
