--- a/src/css/index.css
+++ b/src/css/index.css
@@ -148,7 +148,7 @@ p {
     background-color: #FBF8FF;
     width: 349px;
     padding: 14px;
-    top: 50%;
+    top: 280px;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -352,9 +352,6 @@ footer {
         letter-spacing: 5px;
         /*letter-spacing: normal;
         text-justify: auto;*/
-    }
-    #modal {
-        padding: 5px;
     }
     #box-1, #box-2, #box-3, #box-4 {
         padding-left: 10px;
