--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,20 +4,32 @@
     padding: 0;
 }
 
+:root {
+    --blueishDark: #2D1C50;
+    --banner: #CDA4FF;
+    --socialsBtn: #855BB8;
+    --socialsBtnHover: #7546ad;
+    --demoBtn: #9F50FD;
+    --demoBtnHover: #914ce6;
+    --box1: #9C73CA;
+    --box2: #8661B3;
+    --box3: #552D8A;
+    --box4: #674392;
+    --light: #FBF8FF;
+    --dark: #313131;
+    --white: #fff;
+}
+
 html {
     position: relative;
     min-height: 100%;
     overflow-x: hidden;
+    background-color: var(--light);
 }
 
 h1, h3 {
     font-family: 'JetBrains Mono', monospace;
     font-weight: 800;
-}
-
-h1 {
-    font-size: 35px;
-    letter-spacing: 10px;
 }
 
 h3 {
@@ -27,475 +39,15 @@ h3 {
 p {
     font-family: 'Lexend', sans-serif;
     font-weight: 300;
-    /*font-weight: 500;*/
 }
 
 main {
-    background-color: #FBF8FF;
     padding-top: 40px;
     padding-bottom: 90px;
 }
 
-footer {
-    color: white;
-    background-color: #313131;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    padding: 20px;
-    font-size: 14px;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    color: #2D1C50;
-    padding: 20px;
-    padding-bottom: 5px;
-    height: 175px;
-    max-width: 840px;
-}
-
-.logo-full {
-    display: flex;
-    gap: 15px;
-    height: 65px;
-}
-
-.header-name {
-    white-space: nowrap;
-    /*overflow: hidden;*/
-    font-family: 'JetBrains Mono', monospace;
-    font-weight: 500;
-    /*font-weight: 700;
-    font-weight: 800;*/
-    font-size: 25px;
-}
-
-.socials-mobile {
-    display: none;
-    max-height: 150px;
-}
-
-.socials {
-    display: flex;
-    gap: 6px;
-    height: 36px;
-}
-
-.socials img, .socials-mobile img {
-    width: 36px;
-    height: 36px;
-    background-color: #855BB8;
-    padding: 6px;
-    box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
-}
-
-.socials-btn:hover {
-    cursor: pointer;
-    background-color: #7546ad;
-}
-
-.email-btn {
-    cursor: pointer;
-}
-
 .banner {
-    background-color: #CDA4FF;
+    background-color: var(--banner);
     height: 325px;
     position: relative;
-}
-
-.hidden {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s 1.5s, opacity 1.5s linear;
-}
-
-#email-copy-txt {
-    margin: auto;
-    position: fixed;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #313131;
-    color: white;
-    width: 130px;
-    height: 35px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 4;
-}
-
-.btn-div {
-    max-width: 225px;
-    min-width: 100px;
-    margin: auto;
-    padding: 10px;
-}
-
-#open-modal-btn {
-    font-family: 'Lexend', sans-serif;
-    color: #fff;
-    width: 100%;
-    height: 40px;
-    border: 0;
-    background: linear-gradient(to right, #A465F0, #7C57A8);
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.30);
-}
-
-#open-modal-btn:hover {
-    background: linear-gradient(to right, #a062eb, #6e4a9a);
-    cursor: pointer;
-}
-
-#modal-container {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 3;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
-#modal {
-    background-color: #FBF8FF;
-    width: 349px;
-    padding: 14px;
-    top: 290px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    z-index: 3;
-    font-size: 13px;
-}
-
-#close-modal-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 20px;
-    height: 16px;
-    margin-left: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-top {
-    display: flex;
-    align-items: center;
-    margin-bottom: 8px;
-}
-
-.modal-middle {
-    margin-bottom: 10px;
-}
-
-.txt-margin {
-    margin-bottom: 10px;
-}
-
-#portrait {
-    width: 73px;
-    height: 73px;
-}
-
-#modal-background {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .8);
-    cursor: pointer;
-    z-index: 2;
-}
-
-#box-container {
-    display: flex;
-    gap: 2px;
-    font-size: 12px;
-    color: white;
-}
-
-#box-row-1, #box-row-2 {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-}
-
-#box-1, #box-2, #box-3, #box-4 {
-    padding: 10px;
-    padding-left: 20px;
-}
-
-#box-1 {
-    flex: 4;
-    background-color: #9C73CA;
-}
-#box-3 {
-    flex: 5;
-    background-color: #552D8A;
-}
-#box-2 {
-    background-color: #8661B3;
-}
-#box-4 {
-    background-color: #674392;
-}
-
-#projects-container {
-    max-width: 840px;
-    margin: auto;
-    padding: 20px;
-}
-
-hr {
-    border-top: 1px solid #313131;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.project {
-    display: flex;
-    gap: 10px;
-}
-
-.reverse {
-    flex-direction: row-reverse;
-}
-
-.reverse-btns-tags {
-    margin-left: normal;
-    /*margin-left: auto;*/
-}
-
-.preview {
-    flex: 5;
-}
-
-.info {
-    flex: 6;
-    font-size: 13px;
-}
-
-.desc {
-    margin-bottom: 15px;
-}
-
-.btns-tags {
-    display: flex;
-    flex-direction: column;
-}
-
-.buttons {
-    display: flex;
-    gap: 10px;
-}
-
-.demo-btn, .repo-btn {
-    font-family: 'Lexend', sans-serif;
-    font-weight: 500;
-    background: none;
-    border: none;
-    cursor: pointer;
-    color: white;
-    padding: 4px;
-    padding-left: 15px;
-    padding-right: 15px;
-    box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
-}
-
-.demo-btn {
-    background: #9F50FD;
-    border: 2px solid #9F50FD;
-    transition: color 0.5s;
-    transition: background-color 0.5s;
-}
-.demo-btn:hover {
-    background: #914ce6;
-    border: 2px solid #914ce6;
-}
-
-.repo-btn {
-    background: none;
-    border: 2px solid #313131;
-    color: #313131;
-    transition: color 0.5s;
-    transition: background-color 0.5s;
-}
-
-.repo-btn:hover {
-    background: #313131;
-    color: white;
-}
-
-.tags {
-    display: flex;
-    color: white;
-    font-size: 11px;
-    text-align: center;
-    gap: 10px;
-    margin-top: 15px;
-}
-
-.tag {
-    background-color: #313131;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.preview {
-    position: relative;
-}
-
-.preview-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    box-shadow: 0px 0px 8px 1.3px rgba(0,0,0,0.25);
-}
-
-.img-overlay {
-    background: rgba(0, 0, 0, .8);
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    min-height: 30px;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 5px;
-}
-
-.project-title {
-    color: white;
-    font-family: 'JetBrains Mono', monospace;
-    font-weight: 500;
-    font-size: 14px;
-}
-
-@media only screen and (max-width: 560px) {
-    .socials {
-        display: none;
-    }
-    .socials-mobile {
-        display: flex;
-        flex-direction: column;
-        gap: 2px;
-        margin-left: 10px;
-    }
-    .socials img, .socials-mobile img {
-        box-shadow: none;
-    }
-    #open-btn {
-        box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
-    }
-    #close-btn {
-        transform: scaleY(-1);
-    }
-    .dropdown {
-        display: none;
-    }
-    .logo {
-        height: 52px;
-    }
-    .header-name {
-        font-size: 20px;
-        height: 52px;
-    }
-    #email-copy-txt {
-        top: 140px;
-        left: 50%;
-    }
-}
-
-@media only screen and (max-width: 520px) {
-    .project {
-        flex-direction: column;
-    }
-    .demo-btn, .repo-btn {
-        width: 100%
-    }
-    .tags {
-        justify-content: center;
-    }
-    footer {
-        flex-direction: column;
-        justify-content: center;
-        gap: 5px;
-        /*overflow-wrap: anywhere;*/
-        white-space: nowrap;
-        text-align: center;
-    }
-    #email-btn p {
-        overflow-wrap: anywhere;
-    }
-}
-
-@media only screen and (max-width: 410px) {
-    .header-name {
-        white-space: normal;
-        font-size: 15px;
-    }
-    .logo {
-        height: 40px;
-    }
-
-    .header-name {
-        height: 40px;
-    }
-    #modal-container {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        z-index: 3;
-        display: none;
-        justify-content: center;
-        align-items: center;
-    }
-    #close-modal-btn {
-        background: #313131;
-        color: white;
-        width: 25px;
-        height: 25px;
-        font-size: 18px;
-        right: 15px;
-    }
-}
-
-@media only screen and (max-width: 365px) {
-    #modal {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 340px) {
-    h1 {
-        padding-right: 5px;
-        letter-spacing: 5px;
-        /*letter-spacing: normal;
-        text-justify: auto;*/
-    }
-    #box-1, #box-2, #box-3, #box-4 {
-        padding-left: 10px;
-    }
-    .project-title {
-        overflow: hidden;
-    }
-}
-
-@media only screen and (max-width: 310px) {
-    .buttons {
-        flex-direction: column;
-    }
 }
