--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,40 @@
 footer {
     color: var(--white);
     background-color: var(--dark);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
+    font-size: 0.9rem;
     width: 100%;
+    position: absolute;
+    display: flex;
+    white-space: nowrap;
+    align-items: center;
     bottom: 0;
-    padding: 20px;
-    font-size: 14px;
 }
 
-@media only screen and (max-width: 520px) {
+#footer-content {
+    width: 840px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 5px;
+    padding: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+#email-text {
+    text-decoration: underline;
+}
+
+@media only screen and (min-width: 520px) {
     footer {
-        flex-direction: column;
-        justify-content: center;
-        gap: 5px;
-        white-space: nowrap;
+        gap: 0;
+    }
+    #footer-content {
+        width: 840px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: left;
+        margin: auto;
     }
 }
