--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,8 +1,10 @@
 #open-modal-btn-div {
     max-width: 225px;
-    min-width: 100px;
+    min-width: 60px;
     margin: auto;
-    padding: 10px;
+    padding: 20px;
+    overflow-wrap: initial;
+    overflow: hidden;
 }
 
 #open-modal-btn {
@@ -11,13 +13,35 @@
     width: 100%;
     height: 40px;
     border: 0;
-    background: linear-gradient(to right, #A465F0, #7C57A8);
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.30);
+    padding-left: 10px;
+    padding-right: 10px;
+    background: linear-gradient(to right, #a465f0, #7c57a8);
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.3);
+    position: relative;
+    z-index: 1;
 }
-
 #open-modal-btn:hover {
-    background: linear-gradient(to right, #a062eb, #6e4a9a);
+    /*background: linear-gradient(to right, #a062eb, #6e4a9a);*/
     cursor: pointer;
+}
+#open-modal-btn::before {
+    background: linear-gradient(to right, #a062eb, #6e4a9a);
+}
+@media (prefers-reduced-motion: no-preference) {
+    #open-modal-btn::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        transition: opacity 0.5s linear;
+        opacity: 0;
+    }
+    #open-modal-btn:hover::before {
+        opacity: 1;
+    }
 }
 
 #modal-container {
@@ -32,14 +56,18 @@
 
 #modal {
     background-color: var(--light);
-    width: 349px;
+    width: 100%;
     padding: 14px;
-    top: 290px;
+    padding-left: 4px;
+    padding-right: 4px;
+    top: 260px;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
     z-index: 3;
-    font-size: 13px;
+    font-size: 1rem;
+    /*max-height: 511px;
+    overflow-y: auto;*/
 }
 
 #close-modal-btn {
@@ -54,10 +82,25 @@
     justify-content: center;
     align-items: center;
 }
+/*#close-modal-btn {
+        background: var(--dark);
+        color: var(--white);
+        width: 25px;
+        height: 25px;
+        font-size: 18px;
+        right: 15px;
+    }*/
 
 h1 {
     font-size: 35px;
-    letter-spacing: 10px;
+    padding-right: 5px;
+    letter-spacing: 5px;
+    /*letter-spacing: normal;
+        text-justify: auto;*/
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 93px;
 }
 
 .modal-top {
@@ -77,12 +120,13 @@ h1 {
 #portrait {
     width: 73px;
     height: 73px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 4px;
 }
 
 #modal-background {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .8);
+    background: rgba(0, 0, 0, 0.8);
     cursor: pointer;
     z-index: 2;
 }
@@ -94,16 +138,20 @@ h1 {
     color: var(--white);
 }
 
-#box-row-1, #box-row-2 {
+#box-row-1,
+#box-row-2 {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 2px;
 }
 
-#box-1, #box-2, #box-3, #box-4 {
+#box-1,
+#box-2,
+#box-3,
+#box-4 {
     padding: 10px;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 #box-1 {
@@ -121,86 +169,32 @@ h1 {
     background-color: var(--box4);
 }
 
-@media only screen and (max-width: 560px) {
-    .socials {
-        display: none;
-    }
-    .socials-mobile {
-        display: flex;
-        flex-direction: column;
-        gap: 2px;
-        margin-left: 10px;
-    }
-    .socials img, .socials-mobile img {
-        box-shadow: none;
-    }
-    #open-btn {
-        box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
-    }
-    #close-btn {
-        transform: scaleY(-1);
-    }
-    .dropdown {
-        display: none;
-    }
-    .logo {
-        height: 52px;
-    }
-    .header-name {
-        font-size: 20px;
-        height: 52px;
-    }
-    #email-copy-txt {
-        top: 140px;
-        left: 50%;
-    }
-}
-
-@media only screen and (max-width: 410px) {
-    #modal-container {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        z-index: 3;
-        display: none;
-        justify-content: center;
-        align-items: center;
-    }
-    #close-modal-btn {
-        background: var(--dark);
-        color: var(--white);
-        width: 25px;
-        height: 25px;
-        font-size: 18px;
-        right: 15px;
-    }
-}
-
-@media only screen and (max-width: 365px) {
+@media only screen and (min-width: 365px) {
     #modal {
-        width: 100%;
+        width: 349px;
     }
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (min-width: 340px) {
     h1 {
-        padding-right: 5px;
-        letter-spacing: 5px;
-        /*letter-spacing: normal;
-        text-justify: auto;*/
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        height: 93px;
+        padding-right: 0;
+        letter-spacing: 10px;
+        white-space: normal;
+        overflow: visible;
+        text-overflow: clip;
+        height: auto;
     }
-    #box-1, #box-2, #box-3, #box-4 {
-        padding-left: 10px;
+    #box-1,
+    #box-2,
+    #box-3,
+    #box-4 {
+        padding-left: 20px;
     }
 }
 
-@media only screen and (max-width: 310px) {
+@media only screen and (min-width: 310px) {
     #modal {
-        padding-left: 4px;
-        padding-right: 4px;
+        padding-left: 14px;
+        padding-right: 14px;
     }
 }
