--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -12,11 +12,8 @@ hr {
 
 .project {
     display: flex;
+    flex-direction: column;
     gap: 10px;
-}
-
-.reverse {
-    flex-direction: row-reverse;
 }
 
 .reverse-btns-tags {
@@ -26,11 +23,12 @@ hr {
 
 .preview {
     flex: 5;
+    overflow: hidden;
 }
 
 .info {
     flex: 6;
-    font-size: 13px;
+    font-size: 0.9rem;
 }
 
 .desc {
@@ -44,10 +42,12 @@ hr {
 
 .buttons {
     display: flex;
+    flex-direction: column;
     gap: 10px;
 }
 
-.demo-btn, .repo-btn {
+.demo-btn,
+.repo-btn {
     font-family: 'Lexend', sans-serif;
     font-weight: 500;
     background: none;
@@ -57,14 +57,13 @@ hr {
     padding: 4px;
     padding-left: 15px;
     padding-right: 15px;
-    box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
+    box-shadow: rgba(0, 0, 0, 0.24) 1px 1px 4px;
 }
 
 .demo-btn {
     background: var(--demoBtn);
     border: 2px solid var(--demoBtn);
-    transition: color 0.5s;
-    transition: background-color 0.5s;
+    width: 100%;
 }
 .demo-btn:hover {
     background: var(--demoBtnHover);
@@ -75,8 +74,21 @@ hr {
     background: none;
     border: 2px solid var(--dark);
     color: var(--dark);
-    transition: color 0.5s;
-    transition: background-color 0.5s;
+    width: 100%;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .demo-btn,
+    .repo-btn {
+        transition: color 0.2s;
+        transition: background-color 0.2s;
+    }
+    .preview-img {
+        transition: transform 0.5s ease-in-out;
+    }
+    .preview-img:hover {
+        transform: scale(1.07);
+    }
 }
 
 .repo-btn:hover {
@@ -88,7 +100,7 @@ hr {
     display: flex;
     flex-wrap: wrap;
     color: var(--white);
-    font-size: 11px;
+    font-size: 0.7rem;
     text-align: center;
     gap: 10px;
     margin-top: 15px;
@@ -109,11 +121,11 @@ hr {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    box-shadow: 0px 0px 8px 1.3px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 8px 1.3px rgba(0, 0, 0, 0.25);
 }
 
 .img-overlay {
-    background: rgba(0, 0, 0, .8);
+    background: rgba(0, 0, 0, 0.8);
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -131,26 +143,29 @@ hr {
     font-weight: 500;
     font-size: 14px;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
-@media only screen and (max-width: 520px) {
+@media only screen and (min-width: 520px) {
     .project {
-        flex-direction: column;
+        flex-direction: row;
     }
-    .demo-btn, .repo-btn {
-        width: 100%
+    .demo-btn,
+    .repo-btn {
+        width: auto;
     }
-    .tags {
-        justify-content: center;
+    .reverse {
+        flex-direction: row-reverse;
     }
 }
 
-@media only screen and (max-width: 310px) {
+@media only screen and (min-width: 310px) {
     .buttons {
-        flex-direction: column;
+        flex-direction: row;
     }
     .project-title {
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        white-space: wrap;
+        text-overflow: inherit;
     }
 }
