--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -75,7 +75,7 @@
     border: none;
     cursor: pointer;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.25rem;
     height: 16px;
     margin-left: auto;
     display: flex;
@@ -87,12 +87,12 @@
         color: var(--white);
         width: 25px;
         height: 25px;
-        font-size: 18px;
+        font-size: 1.125rem;
         right: 15px;
     }*/
 
 h1 {
-    font-size: 35px;
+    font-size: 2.188rem;
     padding-right: 5px;
     letter-spacing: 5px;
     /*letter-spacing: normal;
@@ -134,7 +134,7 @@ h1 {
 #box-container {
     display: flex;
     gap: 2px;
-    font-size: 12px;
+    font-size: 0.75rem;
     color: var(--white);
 }
 
