improve project descriptions

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -63,3 +63,19 @@ hr {
     height: 325px;
     position: relative;
 }
+
+#email-copy-txt {
+    margin: auto;
+    position: fixed;
+    top: 76%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--dark);
+    color: var(--white);
+    width: 180px;
+    height: 35px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 4;
+}
