--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -28,7 +28,7 @@ hr {
 
 .info {
     flex: 6;
-    font-size: 0.9rem;
+    font-size: 0.94rem;
 }
 
 .desc {
@@ -100,7 +100,7 @@ hr {
     display: flex;
     flex-wrap: wrap;
     color: var(--white);
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     text-align: center;
     gap: 10px;
     margin-top: 15px;
@@ -115,13 +115,13 @@ hr {
 
 .preview {
     position: relative;
+    /*box-shadow: 0px 0px 8px 1.3px rgba(0, 0, 0, 0.1);*/
 }
 
 .preview-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    box-shadow: 0px 0px 8px 1.3px rgba(0, 0, 0, 0.25);
 }
 
 .img-overlay {
@@ -141,7 +141,7 @@ hr {
     color: var(--white);
     font-family: 'JetBrains Mono', monospace;
     font-weight: 500;
-    font-size: 0.875rem;
+    font-size: 0.94rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
