--- a/src/css/header.css
+++ b/src/css/header.css
@@ -46,16 +46,15 @@
     }
 }
 
-.socials-mobile {
+.socials-desktop {
+    display: none;
+}
+/*.socials-mobile {
     max-height: 150px;
     display: flex;
     flex-direction: column;
     gap: 2px;
     margin-left: auto;
-}
-
-.socials-desktop {
-    display: none;
 }
 
 .socials-desktop img,
@@ -65,6 +64,26 @@
     background-color: var(--socialsBtn);
     padding: 6px;
     box-shadow: none;
+}*/
+.socials-mobile {
+    height: 158px;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    margin-left: auto;
+}
+
+.socials-desktop img,
+.socials-mobile img {
+    width: 38px;
+    height: 38px;
+    background-color: var(--socialsBtn);
+    padding: 7px;
+}
+.socials-desktop a,
+.socials-mobile a {
+    width: 38px;
+    height: 38px;
 }
 
 #open-btn {
