--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -2,6 +2,9 @@
     max-width: 840px;
     margin: auto;
     padding: 20px;
+    /*display: flex;
+    flex-direction: column;
+    gap: 30px;*/
 }
 
 hr {
