--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -44,28 +44,22 @@
     }
 }
 
-#modal-container {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 3;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
 #modal {
     background-color: var(--light);
-    width: 100%;
+    min-width: 100%;
+    max-height: 469px;
     padding: 14px;
     top: 260px;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: absolute;
-    z-index: 3;
     font-size: 1rem;
+    border: none;
     /*max-height: 511px;
     overflow-y: auto;*/
+}
+
+#modal::backdrop {
+    background: rgba(0, 0, 0, 0.8);
 }
 
 #close-modal-btn {
@@ -80,6 +74,7 @@
     justify-content: center;
     align-items: center;
 }
+
 /*#close-modal-btn {
         background: var(--dark);
         color: var(--white);
@@ -90,6 +85,7 @@
     }*/
 
 .modal-name h1 {
+    display: none;
     font-size: 2.188rem;
     padding-right: 5px;
     letter-spacing: 5px;
@@ -121,14 +117,6 @@
 .modal-middle {
     margin-bottom: 10px;
     font-size: 0.94rem;
-}
-
-#modal-background {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    cursor: pointer;
-    z-index: 2;
 }
 
 #box-container {
@@ -169,9 +157,20 @@
     background-color: var(--box4);
 }
 
-@media only screen and (min-width: 360px) {
+@media only screen and (min-width: 188px) {
+    .modal-name h1 {
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 310px) {
     #modal {
-        width: 340px;
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+    #modal-dialog {
+        padding-left: 14px;
+        padding-right: 14px;
     }
 }
 
@@ -188,9 +187,15 @@
     }
 }
 
-@media only screen and (min-width: 310px) {
+@media only screen and (min-width: 360px) {
     #modal {
-        padding-left: 14px;
-        padding-right: 14px;
+        min-width: 0;
+        width: 340px;
+    }
+}
+
+@media only screen and (min-width: 395px) {
+    #modal {
+        overflow-y: hidden;
     }
 }
